improve java 11 compatibility